[package]
name = "GliumGlassfulExample"
version = "0.1.0"
authors = ["Ticki <Ticki@users.noreply.github.com>"]

[dependencies]
glium = "0.13.4"

[dependencies.glassful_macros]
version = "0.0.1"
git = "https://github.com/Ticki/glassful.git"

[dependencies.glassful]
version = "0.0.1"
git = "https://github.com/Ticki/glassful.git"
